--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<button class="dropbtn">Menu</button>
 		<div class="dropdown-content">
 			<a href="news/first-news.html">Artikel <span class="badge">1</span></a>
-			<a href="blog/2016-09-01_first-story.html">Blog <span class="badge">1</span></a>
+			<a href="blog/2016-09-01_first-story.html">1st Blog <span class="badge">1</span></a>
+			<a href="blog/2016-09-04_recap week1.html">2nd Blog <span class="badge">1</span></a>
 			<a href="webdev/web-dev.html">Web Dev <span class="badge">1</span></a>
 			<a href="webdesign/web-design.html">Web Designing <span class="badge">1</span></a>
 			<a href="webeval/website-evaluation.html">Web Evaluation <span class="badge">1</span></a>
@@ -26,6 +27,8 @@
 			<a href="reflection/reflection.html">Reflection <span class="badge">1</span></a>
 			<a href="learning/learning.html">Learning <span class="badge">2</span></a>
 			<a href="javascript1/try.html">Javascript <span class="badge">2</span></a>
+			<a href="reflection/reflection.html">Reflection <span class="badge">2</span></a>
+			<a href="blog/2016-09-11_recap week2.html">3rd Blog <span class="badge">2</span></a>
 		</div>
 	</div>
 	<center>
