--- a/javascript1/try.html
+++ b/javascript1/try.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Javascript Week2</title>
 	<script type="text/javascript" src="example.js"></script>
 	<!--<script src="example.js">-->
@@ -23,6 +24,8 @@
 	</script>
 	
 
-	</h4>
+	<h4 id="test5"></h4>
+	<h5 id="test6">test6</h5>
+
 </body>
 </html>
