--- a/reflection/reflection.html
+++ b/reflection/reflection.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>Reflection</h1>
-                <img src="https://cloud.githubusercontent.com/assets/14039115/18225838/d30167ba-7227-11e6-8afc-438fceb86871.JPG" alt="reflection">
+                <img class="propheader" src="https://cloud.githubusercontent.com/assets/14039115/18225838/d30167ba-7227-11e6-8afc-438fceb86871.JPG" alt="reflection">
             </div>
         </div>
         <!-- /.row -->
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h2>Week-1</h2>
-                <p>Online course di Minggu pertama diperkenalkan aplikasi Slack group, ini pertama kalinya menggunakan aplikasi group seperti ini. Lanjut baca materi dan kerjakan tugas tentang pengenalan Git dan Github HTTPS dan SSH yang merupakan pengalaman baru. Mencoba mengenal command nya, berinteraksi dan coba upload. Sempat salah membuat folder dan salah upload. Baca materinya lagi, variatif (membuat bingung pilih yang mana) dan ikuti serta googling informasi terkait lainnya, coba lagi dan lagi sampai bisa. Senang dapat ilmu baru yaitu mempelajari konsep Git/Github, HTML5 beserta elemen nya, CSS3 dengan transisi dan transformasinya, analisa wireframing. Saat coding awal saya memikirkan bagaimana agar lebih cepat memahami materi agar mudah untuk implementaskan tugas demi tugas harian untuk dikerjakan, hal yang perlu dihindari adalah kurangnya waktu buat keluarga (Istri dan Anak-anak) karena sibuk baca materi dan praktek ngoding, sampai harus ngoding di waktu subuh (moga ga telat lagi submit tugas harian). Hardwork and sacrifice maybe. Lesson to learn that work and life should be balance....Learn to code and life should be balance. Mentor yang remind dan memberikan response dan suggest, almost feel like pair programming. It'll will be nice to have Team work moment to achieve on something.
+                <p>Online course di <a href="https://github.com/hacktiv8/phase-0-activities/blob/master/README-WEEK-1.md">Minggu pertama</a> diperkenalkan aplikasi Slack group, ini pertama kalinya menggunakan aplikasi group seperti ini. Lanjut baca materi dan kerjakan tugas tentang pengenalan Git dan Github HTTPS dan SSH yang merupakan pengalaman baru. Mencoba mengenal command nya, berinteraksi dan coba upload. Sempat salah membuat folder dan salah upload. Baca materinya lagi, variatif (membuat bingung pilih yang mana) dan ikuti serta googling informasi terkait lainnya, coba lagi dan lagi sampai bisa. Senang dapat ilmu baru yaitu mempelajari konsep Git/Github, HTML5 beserta elemen nya, CSS3 dengan transisi dan transformasinya, analisa wireframing. Saat coding awal saya memikirkan bagaimana agar lebih cepat memahami materi agar mudah untuk implementaskan tugas demi tugas harian untuk dikerjakan, hal yang perlu dihindari adalah kurangnya waktu buat keluarga (Istri dan Anak-anak) karena sibuk baca materi dan praktek ngoding, sampai harus ngoding di waktu subuh (moga ga telat lagi submit tugas harian). Hardwork and sacrifice maybe. Lesson to learn that work and life should be balance....Learn to code and life should be balance. Mentor yang remind dan memberikan response dan suggest, almost feel like pair programming. It'll will be nice to have Team work moment to achieve on something.
                 <blockquote>"Work and life should be balance"</blockquote>
               	Still a long way to run....Hopefully, in the next ahead would be anticipate, learn faster, achive next challenges, get skilled and ready to implement.</h3> Maju terus BlandfordFox...</p>
                 <img class="smallimg" src="https://cloud.githubusercontent.com/assets/14039115/18225988/ae6d5d52-722a-11e6-8bb8-cc1a299d84d4.JPG" alt="hacktiv8">
@@ -68,7 +68,9 @@
             <!-- /.col-md-6 -->
             <div class="col-md-6">
                 <h2>Week-2</h2>
-                <p class="pnext">Next reflection for Week-2</p>
+                <p>Pada minggu kedua ini memasuki pembelajaran tentang Javascript, Javascript adalah bahasa pemrograman yang cukup populer saat ini. Pelatihan untuk para peserta adalah dengan mengakses ke web tutorial <a href="http://www.codeacademy.com">CodeAcademy</a> Melalui web ini peserta dihadapkan dengan pembelajaran secara praktek yang terdiri dari 8 tahap. Tahap demi tahap dilalui dengan pelbagai tingkat kesulitan masing-masing. Website ini juga menyediakan link forum sebagai media bertanya &amp menjawab pertanyaan tugas-tugas praktek tiap-tiap tahap. Dalam tahap pembelajaran ini mengajarkan kepada kita bahwa pembelajaran coding adalah sejauh praktek dari coding itu sendiri. <blockquote><p class="well">Semakin lama &amp panjang praktek coding yang dilakukan akan sangat membantu meningkatkan pengalaman &amp pengetahuan coding.</p></blockquote>Lagi-lagi improvement dalam time management diperlukan untuk melaluinya.
+                </p> 
+                <p>Pengalaman pembelajaran <a href="https://github.com/hacktiv8/phase-0-activities/blob/master/README-WEEK-2.md">Week ke-2</a> ini dapat digunakan untuk menunjang kelanjutan dari pembalajaran di minggu2 selanjutnya. Tetap semangat dan keep learning dimana diperlukan pengalaman serta pengetahuan yang dibutuhkan seseorang untuk dikatakan sebagai seorang yang ahli coding.</p>
             </div>
             <!-- /.col-md-6 -->
             <div class="col-md-6">
